# sentseg

./: pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
examples/: config.toml
sentseg/: data.py  lexers.py  main.py  segmenter.py
tests/fixtures/: raw.txt  smoketest-config.toml  truncated-sv_talbanken-ud-dev.conllu
