[metadata]
name = sentseg
version = 0.1.0
description = A neural sentence segmenter
license = MIT
author = Loïc Grobol
author_email = loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    nlp
    parsing
    segmentation

[options]
packages = find:
include_package_data=True
python_requires = >= 3.9
install_requires =
    click
    click_pathlib
    conllu
    torch ~= 1.8.0
    transformers >= 4.0.0, < 5.0.0
    pyyaml

[options.entry_points]
console_scripts =
    sentseg = sentseg.main:main

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
warn_unreachable = True
