[metadata]
name = sentseg
version = 0.1.0
description = A neural sentence segmenter
license = MIT
author = Loïc Grobol
author_email = loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    nlp
    parsing
    segmentation

[options]
packages = find:
include_package_data=True
python_requires = >= 3.8
install_requires =
    boltons
    click
    click_pathlib
    conllu
    pytorch-fast-transformers ~= 0.3.0
    loguru
    pydantic
    pytorch-lightning >= 1.3.0, < 1.4.0
    toml
    torch >= 1.8.1, < 1.10.0
    torchmetrics
    tqdm
    transformers >= 4.0.0, < 5.0.0
    ujson

[options.entry_points]
console_scripts =
    sentseg = sentseg.main:cli

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
warn_unreachable = True
